feature: add DigitalUnitEnum